--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.13.4",
     "sequelize": "^3.23.3",
     "sequelize-cli": "^2.4.0",
-    "socket.io": "^1.4.6"
+    "socket.io": "^1.4.6",
+    "nodemailer": "^4.0.0",
   },
   "devDependencies": {},
   "keywords": ["uptime", "monitoring", "api", "check"],
