--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "version": "3.2.0",
   "author": "Francois Zaninotto",
   "dependencies": {
-    "mongoose":  "3.6.7",
+    "mongoose":  "4.11.11",
     "mongoose-lifecycle": "1.0.0",
     "express":   "3.2.0",
     "express-partials": "0.1.1",
+    "connect": "3.6.0",
     "connect-flash": "0.1.0",
+    "mongodb": "^2.2.20",
+    "pug": "0.1.0",
+    "minimatch": "3.0.2",
     "ejs":       "0.8.3",
     "config":    "0.4.32",
     "async":     "0.1.22",
