--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
   "dependencies": {
     "mongoose":  "4.11.11",
     "mongoose-lifecycle": "1.0.0",
-    "express":   "3.2.0",
-    "express-partials": "0.1.1",
-    "connect": "3.6.0",
-    "connect-flash": "0.1.0",
-    "mongodb": "^2.2.20",
-    "pug": "0.1.0",
+    "express":   "4.15.4",
+    "express-partials": "0.3.0",
+    "connect-flash": "0.1.1",
     "minimatch": "3.0.2",
     "ejs":       "0.8.3",
     "config":    "0.4.32",
@@ -19,9 +16,11 @@
     "socket.io": "0.9.14",
     "semver":    "1.1.0",
     "moment":    "2.1.0",
-    "nodemailer": "^4.0.0",
+    "nodemailer": "^4.0.1",
+    "nodemailer-smtp-transport": "^2.7.4",
     "net-ping":  "1.1.7",
     "js-yaml": "2.1.0",
+    "graceful-fs": "^4.0.0",
     "webpagetest": "0.2.0"
   },
   "devDependencies": {
