--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "mongoose-lifecycle": "1.0.0",
     "express":   "4.15.4",
     "express-partials": "0.3.0",
+    "express-error-handler": "^0.1.4",
+    "body-parser": "1.18.2",
+    "method-override": "2.3.9",
+    "cookie-parser": "1.4.3",
+    "cookie-session": "1.3.2",
     "connect-flash": "0.1.1",
     "minimatch": "3.0.2",
     "ejs":       "0.8.3",
