--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "method-override": "2.3.9",
     "cookie-parser": "1.4.3",
     "cookie-session": "1.3.2",
+    "basic-auth": "2.0.0",
     "connect-flash": "0.1.1",
     "minimatch": "3.0.2",
     "ejs":       "0.8.3",
